--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "embla-carousel-react": "^8.0.2",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
