--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.5",
     "embla-carousel-react": "^8.0.2",
     "next": "14.2.1",
     "react": "^18",
