--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.5",
+    "@vercel/postgres": "^0.8.0",
     "embla-carousel-react": "^8.0.2",
     "next": "14.2.1",
     "react": "^18",
